[package]
name = "sunflower"
version = "0.1.0"
build = "src/build.rs"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polars = { version = "0.35.4", features = ["lazy"] }
slint = "1.3.0"

[build-dependencies]
slint-build = "1.3.0"
